# hakathon-simple

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  LICENSE  PITCH_UZ.md  PLAN.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: graph.py  llm.py  state.py
backend/app/agents/nodes/: __init__.py  answer_writer.py  chart_designer.py  coordinator.py  dashboard_builder.py  error_responder.py  finalizer.py  query_executor.py  query_planner.py  query_validator.py  schema_loader.py
backend/app/api/: auth.py  chat.py  deps.py  schema.py  settings.py  workspaces.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/db/migrations/: env.py
backend/app/engines/: __init__.py  base.py  clickhouse.py  elasticsearch.py  mongodb.py  oracle.py  postgres.py  registry.py  sqlite.py
backend/app/schemas/: llm_io.py  schema_bundle.py  ui_spec.py
backend/app/services/: crypto.py  engine_loader.py  mongo_validator.py  readonly_validator.py  schema_profiler.py  schema_pruner.py  user_settings.py  workspace_resolver.py
backend/app/workers/: celery_app.py  profile_task.py
backend/scripts/: check_vllm.py
backend/tests/integration/: test_chat_sqlite_e2e.py  test_e2e_postgres.py
backend/tests/unit/: test_chart_designer.py  test_crypto.py  test_dashboard_builder.py  test_graph_smoke.py  test_readonly_validator.py  test_schema_profiler.py  test_schema_pruner.py  test_sqlite_engine.py  test_workspace_resolver.py
frontend/: .dockerignore  (+8 more)
(+38 files in other folders)
