[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "querymind-backend"
version = "0.1.0"
description = "QueryMind AI backend — self-hosted NL-to-SQL over user-connected databases."
readme = "../README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "QueryMind AI" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "aiosqlite",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "cryptography",
    "celery[redis]",
    "redis",
    "sqlglot",
    "httpx",
    "langgraph",
    "langchain-core",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
